test/fail/basic_syntax/unterminated_single_line_if.lly
#[
SyntaxError: Expected a value, not 'end of file'.
    from unterminated_single_line_if.lly:6
]#

if 1:
